templates_lec10-ignore/old/lect10-sg.yml
AWSTemplateFormatVersion: 2010-09-09

Description: Template of Security Group for Lecture10

#-----------------------------------------------------------------------------------------------
Parameters:
# Naming Rule of Parameters: Property name(defined in Resources) + Resource Type (+ other identifiers)
# Other identifiers mean Resource Type in parent layer, ID-number etc. for example
#-----------------------------------------------------------------------------------------------
  EnvironmentName:
    Description: Added to a Value of a Name(Key) in Resource's Tag. EnvironmentName must be the same in templates for Cross Stack
    Type: String
    Default: lecture10

  MyIPAddress:
    Description: IPv4 address range set as "My IP Address"
    Type: String
    Default: 118.104.6.180/32

#-----------------------------------------------------------------------------------------------
Resources:
# Naming Rule of logical IDs: EnvironmentName + Resource Type (+ other identifiers)
# Naming Rule of Tags Name's Value: EnvironmentName (+ other identifiers) + Resource Type(abbreviations)
#-----------------------------------------------------------------------------------------------
  Lecture10SecurityGroupEC2:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enabler for access only by SSH and HTTP
      GroupName: !Sub ${EnvironmentName}-ec2-sg
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref MyIPAddress
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref MyIPAddress
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-ec2-sg
      VpcId: Fn::ImportValue !Sub ${EnvironmentName}-vpc

  Lecture10SecurityGroupRDS:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enabler for access only by MYSQL/Aurora
      GroupName: !Sub ${EnvironmentName}-rds-sg
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref Lecture10SecurityGroupEC2
      Tags:
        - key: Name
          Value: !Sub ${EnvironmentName}-rds-sg
      VpcId: Fn::ImportValue !Sub ${EnvironmentName}-vpc

  Lecture10SecurityGroupALB:
   Type: AWS::EC2::SecurityGroup
   Properties:
     GroupDescription: Enabler for access only by HTTP
     GroupName: !Sub ${EnvironmentName}-alb-sg
     SecurityGroupIngress:
       - IpProtocol: tcp
         FromPort: 80
         ToPort: 80
         CidrIP: !Ref MyIPAddress
     Tags:
       - Key: Name
         Value: !Sub ${EnvironmentName}-alb-sg
     VpcId: Fn::ImportValue !Sub ${EnvironmentName}-vpc

#-----------------------------------------------------------------------------------------------
Outputs:
# Naming Rule of Export Name : EnvironmentName(defined in parameters) + Resource Type (+ other identifiers)
# Without abbreviations such as rt(route table), except for AWS's service name such as VPC
#-----------------------------------------------------------------------------------------------
  OutputLecture10SecurityGroupEC2:
    Description: Security Group Output for EC2
    Value: !Ref Lecture10SecurityGroupEC2
    Export:
      Name: !Sub ${EnvironmentName}-security-group-ec2

  OutputLecture10SecurityGroupRDS:
    Description: Security Group Output for RDS
    Value: !Ref Lecture10SecurityGroupRDS
    Export:
      Name: !Sub ${EnvironmentName}-security-group-rds

  OutputLecture10SecurityGroupALB:
    Description: Security Group Output for ALB
    Value: !Ref Lecture10SecurityGroupALB
    Export:
      Name: !Sub ${EnvironmentName}-security-group-alb
